--- a/code/readMe
+++ b/code/readMe
@@ -58,4 +58,6 @@
 
 ======================== 2016-05-25
 期望目标:
-1. SQL文件内容预览时, 语法高亮
+1. SQL文件内容预览时, 语法高亮         已完成
+2. Issue内容预览                                    
+
